implemented new UpdateUser gRPC method
